Changed line 113 to work with Java 16